[package]
name = "pcisph_rs"
version = "0.2.0"
repository = "https://github.com/cerrno/pcisph-rs"
authors = ["Lucas V. Schuermann <lucas@lvs.io>"]
edition = "2021"
license = "MIT"
readme = "README.md"
publish = false

[dependencies]
glium = "0.31.0"
glam = "0.20.0"
cgmath = "0.18.0"
rand = "0.8.4"
rayon = "1.5.1"
log = "0.4"
# usually this would be present in a binary-specific section
env_logger = "0.9.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
debug = 0         # uncomment for flamegraphs
strip = true
